--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "bignumber.js": "^8.0.1",
+    "braces": "^3.0.2",
     "dotenv": "^5.0.1",
     "openzeppelin-solidity": "2.1.3",
     "prettier": "^1.15.3",
